--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-uglifyjs": "^0.6.2",
     "i": "^0.3.5",
     "imagemin-pngquant": "^5.0.0"
