--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-csso": "^3.0.0",
     "gulp-imagemin": "^3.1.1",
+    "gulp-inject": "^4.3.0",
     "gulp-order": "^1.1.1",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
